--- a/openlayersmaps/package.json
+++ b/openlayersmaps/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html",
-    "build": "parcel build --public-url . index.html"
+    "build": "parcel build --experimental-scope-hoisting --public-url . index.html"
   },
   "author": "One-E2-Team",
   "license": "ISC",
